# isops-challenge

./: README.md  pyproject.toml
desafio_tecnico_isops/: README.md  pyproject.toml
desafio_tecnico_isops/arquivos_originais/: Ago.xlsx
isops_technical_challenge/: data_conversion_and_formatting.ipynb  files_consolidation.ipynb  sheets_union.ipynb
original_files/: Jul.xlsx
pt-br/arquivos_originais/: Dados_Candidatos.xlsx  Dados_Consolidados.xlsx  Jan.xlsx
pt-br/desafio_tecnico_isops/: consolidacao_de_arquivos.ipynb  conversao_e_formatacao_dos_dados.ipynb  uniao_de_abas.ipynb
