[tool.poetry]
name = "isops_technical_challenge"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique Gonçalves da Silva <pedro.silva8769@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
