[tool.poetry]
name = "desafio-tecnico-isops"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique Gonçalves da Silva <p.silva@playson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
